<resources>
    <string name="app_name">Logistica</string>
    <string name="title_activity_home"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar Sesión</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_ruta">Rutas</string>
    <string name="menu_viaje">Viajes</string>
    <string name="menu_reporte">Reporte</string>
    <string name="menu_driver">Conductores</string>

    <string name="home_second">Home Second</string>
    <string name="inventario">Inventario</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="ingresar">Ingresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_fecha">Fecha Ingreso</string>
    <string name="hint_Compra">Fecha Compra</string>
    <string name="hint_ruta">Nombre de Ruta</string>
    <string name="hint_origen">Origen</string>
    <string name="hint_destino">Destino</string>
    <string name="hint_modelo">Modelo</string>
    <string name="hint_Ejemplo">Ejemplo</string>
    <string name="hint_regresar">Regresar</string>
    <string name="hint_limpiar">Limpiar</string>
    <string name="hint_previa">Ver Ruta</string>
    <string name="hint_desc">Las Mejores Experiencias</string>
    <string name="hint_save_ruta">Guardar Ruta</string>
    <string name="hint_delete_ruta">Eliminar Ruta</string>
    <string name="hint_save_new_ruta">Guardar Nueva Ruta</string>
    <string name="hint_edit_ruta">Editar Ruta</string>
    <string name="hint_tema">Tema</string>
    <string name="hint_titulo">Titulo</string>
    <string name="hint_precio">Precio</string>
    <string name="hint_serie">Serie</string>
    <string name="hint_subtitulo">Subtitulo</string>
    <string name="hint_cantidad">Cantidad</string>
    <string name="hint_editorial">Editorial</string>
    <string name="hint_isbm">ISBN</string>
    <string name="hint_inventario">Nº Inventario</string>
    <string name="hint_palabras">Palabras Clave</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_years">How Many Years</string>
    <string name="hint_emi">EMI ₹</string>
    <string name="hint_interest_total">Total Interest for Loan ₹</string>
    <string name="rutas">Rutas Turisticas</string>
    <string name="add_rutas">Nueva Ruta</string>
    <string name="add_viaje">Nuevo Viaje</string>
    <string name="add_conductor">Nuevo Conductor</string>
    <string name="edit_rutas">Editar Ruta</string>
    <string name="buscar_rutas">Rutas Disponibles</string>
    <string name="hint_buscar">Búsqueda</string>
    <string name="hint_voz">Usar Voz</string>
    <string name="ingrese_el_nombre_o_el_id_de_ruta">Ingrese el nombre de la Ruta</string>
    <string name="buscar_docuemnto">Buscar Docuemnto</string>
    <string name="ingrese_el_nombre_o_el_isbn_del_documento">Ingrese el nombre o el ISBN del documento</string>
    <string name="title_activity_despachador">Despachador</string>
    <string name="menu_gallery">Ver Viajes</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="facebook_app_id">2888656171242982</string>
    <string name="fb_login_protocol_scheme">fb2888656171242982</string>
    <string name="title_activity_add_rutas">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_addNameCon">Nombres</string>
    <string name="hint_addApeCon">Apellidos</string>
    <string name="hint_AddCon">Registrar</string>
    <string name="hint_addNumLic">Ingrese numero de licencia</string>
    <string name="hint_addTelCON">Número de contacto</string>
    <string name="hint_addDuiCon">Número de DUI</string>
    <string name="hint_addNitCon">Número de NIT</string>
    <string name="hint_addTipoLic">Ingrese tipo de licencia</string>
    <string name="my_image_description">Imagen</string>
    <string name="hint_btnFoto">Foto</string>
    <string name="ip">https://192.168.0.27</string>
    <string name="selectTipoLic">Seleccione Tipo Licencia</string>
    <string name="hint_addDirCon">Direccion</string>
    <string name="hint_btnSearchDriver">Buscar Conductor</string>
    <string name="hint_btnAgregarCond">Agregar Nuevo Conductor</string>
    <string name="buscar_conductor">Buscar Conductores</string>
    <string name="hint_Bconduc">Ingrese Nombre o Apellido</string>
    <string name="buscar_btnDriver">Buscar</string>
    <string name="hint_ModCon">Modificar</string>
    <string name="hint_DelCon">Eliminar</string>
    <string name="edit">Editar Conductor</string>
    <string name="addConductor">Agregar Conductor</string>
</resources>
