<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_ruta"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_ruta" />
         <item
            android:id="@+id/nav_driver"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_driver" />
        <item
            android:id="@+id/nav_addviaje"
            android:icon="@drawable/ic_drive_eta_black_24dp"
            android:title="@string/menu_viaje" />
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/menu_reporte" />
    </group>
</menu>
