<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.logistica.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>


    <fragment
        android:id="@+id/nav_ruta"
        android:name="com.example.logistica.ui.ruta.ConsultaRutas"
        android:label="@string/menu_ruta"
        tools:layout="@layout/fragment_consulta_rutas" />

    <fragment
        android:id="@+id/nav_driver"
        android:name="com.example.logistica.ui.driver.DriverFragment"
        android:label="@string/menu_driver"
        tools:layout="@layout/driver_fragment" />
</navigation>