<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="0dp">
            <!-- TODO: Update blank fragment layout -->


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_rutas"
                android:textColor="#000"
                android:fontFamily="@font/moonlightf"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"/>
              <EditText
                android:id="@+id/id_rutas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                  android:visibility="gone"
                  android:inputType="text"
                android:maxLength="150"
                android:singleLine="true" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_autor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/addnameRutaEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=" ,.-()·@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:hint="@string/hint_ruta"
                    android:inputType="text"
                    android:maxLength="150"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_origen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/origenEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=" ,.-()·@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:hint="@string/hint_origen"
                    android:inputType="text"
                    android:maxLength="150"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/destinoEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits=" ,.-()·@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789"
                    android:hint="@string/hint_destino"
                    android:inputType="text"
                    android:maxLength="150"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/addMappas"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_previa"
                android:background="#363533"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#363533"
                android:layout_marginBottom="30dp"
                android:text="@string/hint_delete_ruta"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
