<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.driver.ConsultaConductor">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="422dp"
        android:layout_marginTop="180dp"
        android:layout_height="100dp">
        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/gradient_1"
            android:text="@string/hint_btnSearchDriver"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="422dp"
        android:layout_marginTop="310dp"
        android:layout_height="100dp">
        <Button
            android:id="@+id/btnAgregarCond"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/gradient_1"
            android:text="@string/hint_btnAgregarCond"
            android:textColor="@android:color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_regresar"
        android:background="@drawable/gradient_1"
        android:layout_marginTop="460dp"
        android:textColor="@android:color/white"/>

</FrameLayout>